2008-08-02  Christian Kellner  <gicmo@gnome.org>

	* autogen.sh: Allow libtool 2.2.

2008-08-02  Christian Persch <chpe@gnome.org>

        * ChangeLog
        * client/gdaemonfile.c
        * client/gdaemonfileinputstream.c
        * client/gdaemonfileoutputstream.c
        * client/gvfsdaemondbus.c
        * common/gdbusutils.c
        * common/gvfsdaemonprotocol.c
        * daemon/gvfsbackendarchive.c
        * daemon/gvfsbackendcdda.c
        * daemon/gvfsbackenddav.c
        * daemon/gvfsbackendftp.c
        * daemon/gvfsbackendgphoto2.c
        * daemon/gvfsbackendobexftp-cap-parser.c
        * daemon/gvfsbackendobexftp-fl-parser.c
        * daemon/gvfsbackendobexftp.c
        * daemon/gvfsbackendsftp.c
        * daemon/gvfsbackendsmb.c
        * daemon/gvfsbackendsmbbrowse.c
        * daemon/gvfsjob.c
        * daemon/gvfsjobopenforwrite.c
        * daemon/gvfsreadchannel.c
        * daemon/gvfswritechannel.c
        * daemon/mount.c
        * daemon/soup-input-stream.c
        * daemon/soup-output-stream.c: Use g_set_error_literal where
        appropriate. Bug #539167.

2008-07-29  David Zeuthen  <davidz@redhat.com>

	* client/gdaemonmount.c:
	* common/gmounttracker.c:
	* common/gmounttracker.h:
	* daemon/gvfsbackend.c:
	* daemon/gvfsbackend.h:
	* daemon/gvfsbackendcdda.c:
	* daemon/gvfsbackendgphoto2.c:
	* daemon/mount.c:
	Add x-content/* support to daemon mounts. Right now a backend
	can only set the x-content/* type ahead of time. We might want
	to add support dynamically obtaining it too (e.g. support
	force_rescan).

	* monitor/hal/ghalmount.c:
	* monitor/hal/ghalvolume.c:
	* monitor/hal/ghalvolumemonitor.c:
	* monitor/hal/hal-utils.c:
	* monitor/hal/hal-utils.h:
	Add x-content/* support to the HAL volume monitor.

	* monitor/proxy/gproxymount.c:
	* monitor/proxy/gproxymount.h:
	* monitor/proxy/gproxyvolumemonitor.c:
	* monitor/proxy/gproxyvolumemonitor.h:
	* monitor/proxy/gvfsproxyvolumemonitordaemon.c: