@@ -1,5 +1,12 @@
 2008-08-02  Christian Kellner  <gicmo@gnome.org>
 
+	* daemon/gvfsbackendtrash.c: (list_trash_dirs):
+	Create the home trash directory if it doesn't already exist,
+	so that we can monitor it for changes. Part two of bug #509740; 
+	Patch by Hans Petter Jansson <hpj@novell.com>
+
+2008-08-02  Christian Kellner  <gicmo@gnome.org>
+
 	* autogen.sh: Allow libtool 2.2.
 
 2008-08-02  Christian Persch <chpe@gnome.org>
